--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
             #prot {
                 display:none;
             }
-
-       
         </style>
         <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -19,7 +17,7 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
     </head>
     <body>
-        
+
         <h1>jQuery Table Test</h1>
         <hr />
 
@@ -100,7 +98,7 @@
                 $("#btnCreate").on("click", function(event){
                     //alert('button clicked');
                     var count = $("table tbody tr").length;
-                    alert(count);
+                    //alert(count);
 			
                     //Only save the form if the user has entered at least one line item.
                     if (count > 2)
